// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styled Components Snapshots renders Author correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0.5rem 1rem;
  font-size: 1rem;
  font-weight: 500;
  text-align: center;
  color: var(--purple);
  background-color: #f9f9f9;
}

<p
    class="emotion-0"
  >
    Author Name
  </p>
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders Container correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0 auto;
  width: 100%;
  padding-top: 1rem;
}

<div
    class="emotion-0"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders GalleryCard correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #fff;
  border: 1px solid #ddd;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
  min-height: 215px;
}

.emotion-0:hover {
  box-shadow: 0 4px 8px var(--blue);
}

<div
    class="emotion-0"
  >
    Card Content
  </div>
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders GalleryGrid correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders GalleryImage correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: auto;
  object-fit: cover;
}

<img
    alt="Example"
    class="emotion-0"
    src="example.jpg"
  />
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders Sentinel correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  text-align: center;
  font-size: 0.9rem;
  padding: 1rem;
  color: #555;
}

.emotion-0::after {
  content: "⌛";
  display: inline-block;
  margin-left: 0.5rem;
  -webkit-animation: spin 1s linear infinite;
  animation: spin 1s linear infinite;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Styled Components Snapshots renders SkeletonCard correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: 220px;
  background: linear-gradient(90deg, #f0f0f0 25%, #e2e2e2 50%, #f0f0f0 75%);
  -webkit-animation: shimmer 1.5s infinite;
  animation: shimmer 1.5s infinite;
  aria-label: "Loading content";
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
